--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
     "name": "management",
     "version": "1.0.0",
-    "script": {
+    "license": "UNLICENSED",
+    "scripts": {
         "client": "cd client && yarn start",
         "server": "nodemon server.js",
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
         "body-parser": "^1.19.0",
-        "express": "^4.17.1"
+        "express": "^4.16.4",
+        "http-proxy-middleware": "^1.0.5",
+        "yarn": "^1.22.10"
     },
     "devDependencies": {
         "concurrently": "^5.3.0"
