--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     },
     "dependencies": {
         "body-parser": "^1.19.0",
+        "dotenv": "^8.2.0",
+        "ejs": "^3.1.5",
         "express": "^4.16.4",
         "http-proxy-middleware": "^1.0.5",
+        "mysql": "^2.18.1",
+        "path": "^0.12.7",
         "yarn": "^1.22.10"
     },
     "devDependencies": {
