--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "ejs": "^3.1.5",
         "express": "^4.16.4",
         "http-proxy-middleware": "^1.0.5",
+        "multer": "^1.4.2",
         "mysql": "^2.18.1",
         "path": "^0.12.7",
         "yarn": "^1.22.10"
