--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
     },
     "dependencies": {
+        "@material-ui/icons": "^4.9.1",
         "axios": "^0.20.0",
         "body-parser": "^1.19.0",
         "dotenv": "^8.2.0",
